--- a/index.html
+++ b/index.html
@@ -8,41 +8,56 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #7f8c8d;
-            padding: 50px;
+            background: #7f8c8d;
+            padding: 20px;
+            margin: 0;
         }
+
         h1 {
-            color: #ffffff;
+            color: #fff;
+            text-shadow: 1px 1px 2px #000;
+            margin-top: 20px;
         }
-        .button {
+
+        .menu {
+            margin-top: 20px;
+        }
+
+        button {
             display: block;
             width: 200px;
-            margin: 20px auto;
-            padding: 15px;
-            font-size: 20px;
-            color: white;
+            margin: 10px auto;
+            padding: 10px;
             border: none;
-            border-radius: 8px;
+            border-radius: 5px;
+            font-size: 18px;
             cursor: pointer;
-            transition: background 0.3s;
+            color: #fff;
         }
-        .button.blue {
+
+        button.one-player {
             background-color: #3498db;
         }
-        .button.blue:hover {
-            background-color: #2980b9;
-        }
-        .button.red {
+
+        button.two-players {
             background-color: #e74c3c;
-        }
-        .button.red:hover {
-            background-color: #c0392b;
         }
     </style>
 </head>
 <body>
     <h1>Memory Game</h1>
-    <button class="button blue" onclick="location.href='solo.html'">One Player</button>
-    <button class="button red" onclick="location.href='multiplayer.html'">Two Players</button>
+    <div class="menu">
+        <button class="one-player" onclick="startSoloMode()">One Player</button>
+        <button class="two-players" onclick="startMultiplayerMode()">Two Players</button>
+    </div>
+    <script>
+        function startSoloMode() {
+            window.location.href = "modo_solo.html";
+        }
+
+        function startMultiplayerMode() {
+            window.location.href = "modo_multiplayer.html";
+        }
+    </script>
 </body>
 </html>
