--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     </div>
     <script>
         function startSoloMode() {
-            window.location.href = "modo_solo.html";
+            window.location.href = "solo.html";
         }
 
         function startMultiplayerMode() {
-            window.location.href = "modo_multiplayer.html";
+            window.location.href = "multiplayer.html";
         }
     </script>
 </body>
