--- a/multiplayer.html
+++ b/multiplayer.html
@@ -184,7 +184,7 @@
         }
 
         function playSound(animalName) {
-            const audio = new Audio(`./sons/${animalName}.mp3`);
+            const audio = new Audio(`sons/${animalName}.mp3`);
             audio.play();
         }
 
