--- a/multiplayer.html
+++ b/multiplayer.html
@@ -111,12 +111,12 @@
 
     <script>
         const animals = [
-            { name: "dog", emoji: "🐶" }, { name: "cat", emoji: "🐱" },
-            { name: "cow", emoji: "🐮" }, { name: "lion", emoji: "🦁" },
-            { name: "monkey", emoji: "🐵" }, { name: "tiger", emoji: "🐯" },
-            { name: "rabbit", emoji: "🐰" }, { name: "mouse", emoji: "🐭" },
-            { name: "chicken", emoji: "🐔" }, { name: "frog", emoji: "🐸" },
-            { name: "panda", emoji: "🐼" }, { name: "penguin", emoji: "🐧" }
+            { name: "Dog", emoji: "🐶" }, { name: "Cat", emoji: "🐱" },
+            { name: "Cow", emoji: "🐮" }, { name: "Lion", emoji: "🦁" },
+            { name: "Monkey", emoji: "🐵" }, { name: "Tiger", emoji: "🐯" },
+            { name: "Rabbit", emoji: "🐰" }, { name: "Mouse", emoji: "🐭" },
+            { name: "Chicken", emoji: "🐔" }, { name: "Frog", emoji: "🐸" },
+            { name: "Panda", emoji: "🐼" }, { name: "Penguin", emoji: "🐧" }
         ];
 
         let cards = [...animals, ...animals];
